--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 body {
   @apply bg-background text-main-font font-sans;
 }
@@ -38,9 +39,7 @@ input::file-selector-button {
   scrollbar-width: thin; /* Firefox support */
   scrollbar-color: #6e2617 #fefdfc; /* Thumb and track color for Firefox */
 }
-input,
-optgroup,
-select {
+input, optgroup, select {
   background-color: #e6e6d7;
 }
 
@@ -50,5 +49,5 @@ select {
 
 .add-activity .ql-toolbar.ql-snow {
   display: flex !important;
-  justify-content: center;
+    justify-content: center;
 }
